--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html>MEU ASTRO</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1></h1>
+    <img src="" alt="">
+    <h3> </h3>
+</body>
+</html>
