--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1></h1>
-    <img src="" alt="">
+    <h1>meu grande astro</h1>
+    <img src="index.jpg" alt="">
     <h3> </h3>
 </body>
 </html>
