--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>meu grande astro</h1>
+    <h2> endrick</h2>
+    
     <img src="index.jpg" alt="">
-    <h3> </h3>
+    <h3>endrick é um jovem atacante brasileiro nascido em 21 de julho de 2006, no estado de são paulo.
+    </h3>
 </body>
 </html>
