Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <h2> endrick</h2>
     
     <img src="index.jpg" alt="">
-    <h3>endrick é um jovem atacante brasileiro nascido em 21 de julho de 2006, no estado de são paulo.
-    </h3>
+    <h3>Endrick Felipe Moreira, conhecido como Endrick, é um jovem futebolista brasileiro nascido em 21 de julho de 2006, em São Paulo, Brasil. Ele ganhou destaque como atacante promissor nas categorias de base do Palmeiras, clube onde iniciou sua carreira profissional. Endrick chamou a atenção por seu talento, habilidade e capacidade de finalização precoce, sendo comparado a alguns dos maiores jogadores do futebol brasileiro.
+
+Sua ascensão nas divisões de base e no time profissional do Palmeiras fez com que clubes europeus começassem a monitorar seu progresso de perto. Em dezembro de 2022, ele assinou um contrato com o Real Madrid, um dos clubes mais prestigiados da Europa, embora ele não tenha se mudado para a Espanha imediatamente devido a regulamentos de transferências internacionais para jogadores menores de idade.
+
+Endrick é visto como um dos maiores talentos da nova geração do futebol brasileiro e europeu, com expectativas de ter uma carreira brilhante pela frente.</h3>
+
 </body>
 </html>
